Consumingo rotas de auteticação na page login com telefone v02

--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
@@ -1,35 +1,48 @@
 <app-header (emitCarrinho)="ativaCarrinho()" [carrinho]="true" class="s" [admin]="false"></app-header>
 <app-mobile-navbar></app-mobile-navbar>
+
 <div class="area-loja">
-    <div #element class="main">
-        <div class="ng-categoria">
-            <section class="container-area">
-                <div class="carrossel">
-                    <app-carrossel></app-carrossel>
-                </div>
-                <div class="ng-itens">
-                    @for (categoria of categorias; track $index) {
-                    <app-opcoes-categoria (idevent)="navigate(categoria.nome)" [url]="categoria.icone"
-                        [name]="categoria.nome"></app-opcoes-categoria>
-                    }
-                </div>
-            </section>
-            <div class="propaganda">
-                @for (empresa of produtos; track $index) {
-                @if (empresa.produtos.length) {
-                <app-mais-postados [ativo]="true" [produto]="empresa.produtos" [empresa]="empresa"></app-mais-postados>
-                }
-                }
-            </div>
+  <div #element class="main">
+    <div class="ng-categoria">
+      <section class="container-area">
+        <div class="carrossel">
+          <app-carrossel></app-carrossel>
         </div>
-        <app-footer [footerActive]="true"></app-footer>
+
+        <div class="ng-itens">
+          @for (categoria of categorias; track $index) {
+            <app-opcoes-categoria
+              (idevent)="navigate(categoria.nome)"
+              [url]="categoria.icone"
+              [name]="categoria.nome"
+            ></app-opcoes-categoria>
+          }
+        </div>
+      </section>
+
+      <div class="propaganda">
+        @for (empresa of produtos; track $index) {
+          @if (empresa?.produtos?.length) {
+            <app-mais-postados
+              [ativo]="true"
+              [produto]="empresa.produtos"
+              [empresa]="empresa"
+            ></app-mais-postados>
+          }
+        }
+      </div>
     </div>
+
+    <app-footer [footerActive]="true"></app-footer>
+  </div>
 </div>
 
 @if (ativaCar) {
-<app-carrinho (desbiledCarEmit)="ativaCarrinho()"></app-carrinho>
+  <app-carrinho (desbiledCarEmit)="ativaCarrinho()"></app-carrinho>
 }
-@if (ativo) {
-<div class="btn"><button (click)="onWindows()"><mat-icon>arrow_upward</mat-icon></button></div>
 
+@if (ativo) {
+  <div class="btn">
+    <button (click)="onWindows()"><mat-icon>arrow_upward</mat-icon></button>
+  </div>
 }
