--- a/src/app/features/pages/v1/loja/loja.component.html
+++ b/src/app/features/pages/v1/loja/loja.component.html
@@ -1,4 +1,4 @@
-@if (produto?.idProduto) {
+@if (produto != null) {
   <div class="produto-detalhes-container">
 
     @if (produto?.imagens?.length) {
