--- a/src/app/features/pages/auth/signinCodWhatsapp02/signinCodWhatsapp02.component.html
+++ b/src/app/features/pages/auth/signinCodWhatsapp02/signinCodWhatsapp02.component.html
@@ -2,7 +2,7 @@
     <div class="ng-main">
         <div class="ng-logo" (click)="pageCategorias()"></div>
         <app-formModal>
-            <app-form-signinCodWhatsapp></app-form-signinCodWhatsapp>
+                    <router-outlet></router-outlet>
         </app-formModal>
     </div>
 </app-page-container>
