--- a/src/app/features/pages/auth/signinCodWhatsapp02/authSigninCodeWhatsapp/authSigninCodeWhatsapp.component.html
+++ b/src/app/features/pages/auth/signinCodWhatsapp02/authSigninCodeWhatsapp/authSigninCodeWhatsapp.component.html
@@ -14,7 +14,7 @@
     <form [formGroup]="groupform">
       <div class="form-step step-2">
         <div class="card flex justify-center custom-otp">
-          <p-inputotp #primeiroInput autofocus [length]="6" formControlName="code" [integerOnly]="true"
+          <p-inputotp #primeiroInput autofocus [length]="6" formControlName="code"
             (keydown.enter)="AuthUserCodeWhatsapp()" />
         </div>
 
