Corrigindo o input opt page resetPassword v01

--- a/src/app/features/pages/auth/signinCodWhatsapp02/authSigninCodeWhatsapp/authSigninCodeWhatsapp.component.html
+++ b/src/app/features/pages/auth/signinCodWhatsapp02/authSigninCodeWhatsapp/authSigninCodeWhatsapp.component.html
@@ -14,7 +14,7 @@
     <form [formGroup]="groupform">
       <div class="form-step step-2">
         <div #otpContainer class="card flex justify-center custom-otp">
-          <ngx-otp-input [options]="otpOptions" (paste)="onPaste($event)" (otpChange)="onCodeChange($event)"
+          <ngx-otp-input #otpRef [options]="otpOptions" (otpChange)="onCodeChange($event)"
             (otpComplete)="onOtpComplete($event)">
           </ngx-otp-input>
 
