--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
@@ -45,9 +45,11 @@
 
             <!-- Step 2 -->
             <div *ngIf="currentStep === 2" class="form-step step-2">
-                <div class="card flex justify-center custom-otp">
-                    <p-inputotp #primeiroInput autofocus [length]="6" formControlName="code"
-                        (keydown.enter)="validarCodigo()" />
+                <div #otpContainer class="card flex justify-center custom-otp">
+                    <ngx-otp-input #otpRef [options]="otpOptions" (otpChange)="onCodeChange($event)"
+                        (otpComplete)="onOtpComplete($event)">
+                    </ngx-otp-input>
+
                 </div>
                 @if (isRequired('code')) {
                 <small class="ng-error">Informe o código de verificação!</small>
@@ -88,17 +90,36 @@
 
             <div class="buttons">
                 <button mat-flat-button type="button" (click)="enviarCodigoEmail()" *ngIf="currentStep === 1"
-                    class="ng-btn" [disabled]="!isCurrentStepValid()">Enviar código</button>
-                <button mat-flat-button *ngIf="currentStep === 2" class="ng-btn" [disabled]="!isCurrentStepValid()"
-                    (click)="validarCodigo()">Confirmar código de verificação</button>
+                    class="ng-btn" [disabled]="!isCurrentStepValid()  || carregando">
+                    
+                    <span class="btn-content">Enviar código</span>
+
+                    @if (carregando) {
+                    <div class="btn-spinner-container">
+                        <mat-spinner [diameter]="20" strokeWidth="2"></mat-spinner>
+                    </div>
+                    }
+
+                </button>
+                <button mat-flat-button *ngIf="currentStep === 2" class="ng-btn"
+                    [disabled]="!isCurrentStepValid() || carregando" (click)="validarCodigo()">
+
+                    <span class="btn-content">Confirmar Código</span>
+
+                    @if (carregando) {
+                    <div class="btn-spinner-container">
+                        <mat-spinner [diameter]="20" strokeWidth="2"></mat-spinner>
+                    </div>
+                    }
+                </button>
                 <button mat-flat-button *ngIf="currentStep === 3" class="ng-btn"
                     [disabled]="senhasNaoConferem() || !isCurrentStepValid()" (click)="novaSenha()">Criar nova
                     senha</button>
             </div>
         </form>
-    @if(!isVisible) {
+        @if(!isVisible) {
         <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary"
             (click)="voltarPaginaAnterior()">Voltar</button>
-    }
+        }
     </div>
 </div>
