--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
@@ -128,6 +128,7 @@
                     padding-left: 10px;
                 }
 
+
                 .ng-password-btn {
                     display: flex;
                     padding: 2px;
@@ -170,17 +171,40 @@
 
 
             .ng-btn {
+                position: relative;
                 width: 100%;
                 height: 35px;
-                border-radius: 5px;
-                border: 1px solid #c8c8c8;
-                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 font-family: var(--font-family);
                 font-size: 14px;
                 font-weight: 500;
                 color: #592d74;
                 margin-top: 20px;
+                border-radius: 5px;
+                border: 1px solid #c8c8c8;
+                overflow: hidden;
+                cursor: pointer;
             }
+
+            .btn-content {
+                z-index: 1;
+            }
+
+            .btn-spinner-container {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                z-index: 2;
+                pointer-events: none;
+            }
+
 
             .ng-btn:hover {
                 background-color: #eee;
@@ -192,11 +216,17 @@
             }
 
             .ng-btn:disabled {
+                background: rgba($color: #eee, $alpha: 0.8);
                 color: #888;
             }
         }
     }
 }
+::ng-deep ngx-otp-input input {
+  text-transform: uppercase !important;
+  width: 40px;
+}
+
 
 .custom-otp {
     display: flex;
