--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
@@ -52,7 +52,7 @@
 
                 </div>
                 @if (isRequired('code')) {
-                <small class="ng-error">Informe o código de verificação!</small>
+                <small class="ng-error code">Informe o código de verificação!</small>
                 }
 
                 <button mat-flat-button type="button" (click)="enviarCodigoEmail()">Reenviar código</button>
