--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
@@ -159,6 +159,9 @@
                 color: #FF8401;
                 padding: 2px 5px;
             }
+            .code {
+                text-align: center;
+            }
         }
 
 
