--- a/src/app/features/pages/auth/signinCodWhatsapp02/authSigninCodeWhatsapp/authSigninCodeWhatsapp.component.scss
+++ b/src/app/features/pages/auth/signinCodWhatsapp02/authSigninCodeWhatsapp/authSigninCodeWhatsapp.component.scss
@@ -92,6 +92,10 @@
                 color: #FF8401;
                 padding: 2px 5px;
             }
+
+            .code {
+                text-align: center;
+            }
         }
 
         .reenviar-corrigir {
