Corrigindo o input opt page resetPassword v03

--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
@@ -55,7 +55,16 @@
                 <small class="ng-error code">Informe o código de verificação!</small>
                 }
 
-                <button mat-flat-button type="button" (click)="enviarCodigoEmail()">Reenviar código</button>
+                <div class="reenviar-corrigir">
+                    <button mat-button color="primary" class="botao-reenviar" [disabled]="!reenviarDisponivel"
+                        (click)="reenviarCodigoEmail()">
+                        {{ reenviarDisponivel ? 'Reenviar Código' : 'Reenviar em (' + contador + 's)' }}
+                    </button>
+                    <span>|</span>
+                    <button mat-button color="primary" class="botao-reenviar" (click)="pageResetPassword()">
+                        Corrigir Email
+                    </button>
+                </div>
             </div>
 
             <!-- Step 3 -->
@@ -91,7 +100,7 @@
             <div class="buttons">
                 <button mat-flat-button type="button" (click)="enviarCodigoEmail()" *ngIf="currentStep === 1"
                     class="ng-btn" [disabled]="!isCurrentStepValid()  || carregando">
-                    
+
                     <span class="btn-content">Enviar código</span>
 
                     @if (carregando) {
