--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
@@ -159,12 +159,22 @@
                 color: #FF8401;
                 padding: 2px 5px;
             }
+
             .code {
                 text-align: center;
             }
         }
 
+        .reenviar-corrigir {
+            display: flex;
+            align-items: center;
+            color: #bbb;
 
+            .botao-reenviar {
+                font-size: 10px;
+                color: #bbb !important;
+            }
+        }
 
 
         .buttons {
@@ -225,9 +235,10 @@
         }
     }
 }
+
 ::ng-deep ngx-otp-input input {
-  text-transform: uppercase !important;
-  width: 40px;
+    text-transform: uppercase !important;
+    width: 40px;
 }
 
 
