--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,14 +23,15 @@
   overflow: hidden;
 }
 
-html,body {
+html,
+body {
   height: 100%;
   font-size: var();
   font-family: Arial, Helvetica, sans-serif;
   font-family: var(family);
   font-style: var(--font-style);
   font-size: 18px;
-    overflow: hidden; 
+  overflow: hidden;
 
 }
 
@@ -76,7 +77,12 @@ select {
   z-index: 9999 !important;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  top: 0 !important;
+  position: fixed !important;
 }
+
+
+
 ::ng-deep .cdk-overlay-container {
   z-index: 9999 !important;
 }
