--- a/src/app/features/pages/admin/homeAdmin/carrinho/carrinho.component.html
+++ b/src/app/features/pages/admin/homeAdmin/carrinho/carrinho.component.html
@@ -1,31 +1,33 @@
 <section class="container" (click)="desabiledCar()">
-    <div class="container-int" (click)="filhoClicado($event)">
-        <div class="container-header">
-            <button class="btn" mat-flat-button (click)="desabiledCar()">
-                <mat-icon>close</mat-icon>
-            </button>
-            <h1>Meu Carrinho</h1>
-        </div>
-        <div class="container-infor-produto">
-            <section class="th">
-                <app-item [produto]="produto"></app-item>
-                <app-item [produto]="produto"></app-item>
-                <app-item [produto]="produto"></app-item>
-
-                <app-item [produto]="produto"></app-item>
-                <app-item [produto]="produto"></app-item>
-
-
-            </section>
-
-        </div>
-        <div class="btn-compras">
-            <div class="valor">
-                <span>Subtotal</span>
-                <small>Valor 120222</small>
-            </div>
-
-            <button>Finalizar compras</button>
-        </div>
+  <div class="container-int" (click)="filhoClicado($event)">
+    <div class="container-header">
+      <button class="btn" mat-flat-button (click)="desabiledCar()">
+        <mat-icon>close</mat-icon>
+      </button>
+      <h1>Meu Carrinho</h1>
     </div>
+
+    <div class="container-infor-produto">
+      <section class="th">
+
+        @if (itensCarrinho.length > 0) {
+          @for (item of itensCarrinho; track item.idProduto) {
+            <app-item-carrinho [produto]="item"></app-item-carrinho>
+          }
+        } @else {
+          <p>Carrinho vazio.</p>
+        }
+
+      </section>
+    </div>
+
+    <div class="btn-compras">
+      <div class="valor">
+        <span>Subtotal</span>
+        <small>Valor R$ {{ subtotal | number: '1.2-2' }}</small>
+      </div>
+
+      <button>Finalizar compras</button>
+    </div>
+  </div>
 </section>
