--- a/src/app/features/pages/admin/homeAdmin/carrinho/carrinho.component.scss
+++ b/src/app/features/pages/admin/homeAdmin/carrinho/carrinho.component.scss
@@ -41,20 +41,22 @@
 
             }
         }
+
         .container-infor-produto {
-                flex: 1;
-                overflow-y: auto;
-                background-color: #FFF;
-                scrollbar-width: thin;
-                scrollbar-color: #0d1d3f;
+            flex: 1;
+            overflow-y: auto;
+            background-color: #FFF;
+            scrollbar-width: thin;
+            scrollbar-color: #0d1d3f;
 
             section {
                 padding: 10px;
                 display: flex;
                 flex-direction: column;
+
                 .th {
                     margin: 10px 0;
-                    width:100%;
+                    width: 100%;
                     height: 150px;
                     background-color: rgb(240, 237, 237);
                 }
@@ -69,8 +71,9 @@
             justify-content: center;
             align-items: center;
             gap: 20px;
-            width: 100%;     
-            height: 150px;       padding: 10px 36px;
+            width: 100%;
+            height: 150px;
+            padding: 10px 36px;
             border-top: 2px solid #e6e6e6;
 
             .valor {
@@ -84,15 +87,58 @@
             }
 
 
-            button {
-                height: 30px;
-                width: 200px;
-                border: 0;
+
+            .ng-btn {
+                position: relative;
+                width: 100%;
+                height: 35px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-family: var(--font-family);
+                background: var(--background-color-container);
+                font-size: 14px;
+                font-weight: 500;
+                color: #fff;
+                margin-top: 20px;
                 border-radius: 5px;
-                background-color: rgb(105, 105, 243);
-                color: #f2f2f2;
+                border: 1px solid #c8c8c8;
+                overflow: hidden;
+                cursor: pointer;
+            }
+
+            .btn-content {
+                z-index: 1;
+            }
+
+            .btn-spinner-container {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                z-index: 2;
+                pointer-events: none;
+            }
+
+
+            .ng-btn:hover {
+                background-color: #eee;
+            }
+
+            .ng-btn:active {
+                transform: scale(0.97);
 
             }
+
+            .ng-btn:disabled {
+                background: rgba($color: #eee, $alpha: 0.8);
+                color: #888;
+            }
+
         }
     }
 }
