--- a/src/app/features/pages/admin/homeAdmin/carrinho/itemCarrinho/itemCarrinho.component.html
+++ b/src/app/features/pages/admin/homeAdmin/carrinho/itemCarrinho/itemCarrinho.component.html
@@ -15,10 +15,12 @@
 
       <div class="quantidade-carrinho">
         <button (click)="diminuirQuantidade()">-</button>
-        <input type="number" [value]="quantidade" />
-        <button (click)="quantidade = quantidade + 1">+</button>
 
+        <input type="number" [value]="quantidade" (input)="aoDigitarQuantidade($event)" (change)="atualizarManual($event)" />
+
+        <button (click)="aumentarQuantidade()">+</button>
       </div>
+
     </div>
 
     @if (produto?.empresaDTO?.nomeCompania) {
