--- a/src/app/features/pages/v1/loja/loja.component.html
+++ b/src/app/features/pages/v1/loja/loja.component.html
@@ -1,7 +1,7 @@
 @if (produto != null) {
   <app-header (emitCarrinho)="ativaCarrinho()" [carrinho]="true" class="s" [admin]="false"></app-header>
   <app-mobile-navbar></app-mobile-navbar>
-  
+
 <div class="produto-detalhes-container">
 
   @if (produto?.imagens?.length) {
@@ -47,4 +47,8 @@
 </div>
 } @else {
 <p>Produto não encontrado.</p>
+}
+
+@if (ativaCar) {
+<app-carrinho (desbiledCarEmit)="ativaCarrinho()"></app-carrinho>
 }
