--- a/src/app/features/pages/v1/loja/loja.component.scss
+++ b/src/app/features/pages/v1/loja/loja.component.scss
@@ -3,6 +3,7 @@
   gap: 20px;
   flex-wrap: wrap;
   padding: 20px;
+  margin-top: 50px;
 }
 
 .galeria-imagens {
@@ -148,7 +149,8 @@
     }
   }
 }
-.pt{
-  width:350px;
+
+.pt {
+  width: 350px;
   height: 200px;
 }
