Consumindo api de Criação de pedidos v03

--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -32,7 +32,8 @@
             }
             <div class="carrinho">
                 <!-- aqui vamos adiconar o valor adicionando ao carrinho -->
-                <div class="toggle-ico">{{2}}</div> <!--badge-->
+                <div class="toggle-ico">{{ totalItensCarrinho }}</div>
+
                 <mat-icon (click)="light() ">
                     shopping_cart
                 </mat-icon>
