--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -25,7 +25,7 @@
         }
 
 
-        @if (carrinho) {
+        @if (!isAdmin) {
         <section class="ng-checkout">
             @if (isVisible) {
             <div class="ng-btn-empresas" (click)="pagePlanos()">Zapdai Empresas</div>
@@ -50,6 +50,7 @@
             }
             }
         </section>
+    }
 
 
         @if (isVisible) {
@@ -132,7 +133,6 @@
             </div>
             }
         </div>
-        }
         }
 
     </header>
