--- a/src/app/features/pages/v1/minhasCompras/minhasCompras.component.scss
+++ b/src/app/features/pages/v1/minhasCompras/minhasCompras.component.scss
@@ -35,6 +35,16 @@
     font-size: 0.9rem;
     color: #555;
   }
+
+  footer {
+    height: 30px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #8b8383;
+    margin-bottom: 60px;
+  }
 }
 
 
