--- a/src/app/features/pages/admin/homeAdmin/home.component.scss
+++ b/src/app/features/pages/admin/homeAdmin/home.component.scss
@@ -61,6 +61,7 @@
                     font-weight: 600;
                     font-family: Arial, Helvetica, sans-serif;
                     color: #8b8383;
+                    margin-bottom: 60px;
                 }
             }
         }
