--- a/src/app/features/pages/v1/minhasCompras/minhasCompras.component.scss
+++ b/src/app/features/pages/v1/minhasCompras/minhasCompras.component.scss
@@ -1,6 +1,7 @@
 .main {
   height: 100vh;
   width: 100%;
+  margin-top: 40px;
   overflow-y: auto;
   position: relative;
   scrollbar-width: thin;
@@ -43,7 +44,7 @@
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
     color: #8b8383;
-    margin-bottom: 60px;
+    margin-bottom: 100px;
   }
 }
 
