--- a/src/app/features/pages/v1/minhasCompras/minhasCompras.component.html
+++ b/src/app/features/pages/v1/minhasCompras/minhasCompras.component.html
@@ -10,26 +10,33 @@
     } @else if (pedidos.length === 0) {
     <p>Nenhum pedido encontrado.</p>
     } @else {
-    <div class="lista-pedidos">
+    <div class="timeline">
       @for (pedido of pedidos; track pedido.id) {
-      <div class="card-pedido">
-        <h3>Pedido #{{ pedido.numeroDoPedido }}</h3>
-        <p>Status: <strong>{{ pedido.statusPagamento }}</strong></p>
-        <p>Data: {{ pedido.dataDeCriacao | date: 'short' }}</p>
-        <p>Total: R$ {{ pedido.precoTotal | number: '1.2-2' }}</p>
-
-        <div class="produtos">
-          <h4>Produtos:</h4>
-          <ul>
-            @for (prod of pedido.produtos; track prod.id) {
-            <li>{{ prod.produtoName }} (x{{ prod.quantidade }})</li>
-            }
-          </ul>
+      <div class="timeline-item">
+        <div class="pedido-data">
+          {{ pedido.dataDeCriacao | date: "d 'de' MMMM 'de' y - HH:mm" }}
         </div>
 
-        <div class="pagamento">
-          <p>Forma de Pagamento: {{ pedido.pagamento.formaDePagamento }}</p>
-          <p>Confirmado: {{ pedido.pagamento.confirmado ? 'Sim' : 'Não' }}</p>
+
+        <div class="timeline-marker" [ngClass]="pedido.statusPagamento.toLowerCase()"></div>
+        <div class="timeline-content">
+          <h3>Pedido #{{ pedido.numeroDoPedido }}</h3>
+          <p>Status: <strong>{{ pedido.statusPagamento }}</strong></p>
+          <p>Total: R$ {{ pedido.precoTotal | number: '1.2-2' }}</p>
+
+          <div class="produtos">
+            <h4>Produtos:</h4>
+            <ul>
+              @for (prod of pedido.produtos; track prod.id) {
+              <li>{{ prod.produtoName }} (x{{ prod.quantidade }})</li>
+              }
+            </ul>
+          </div>
+
+          <div class="pagamento">
+            <p>Forma de Pagamento: {{ pedido.pagamento.formaDePagamento }}</p>
+            <p>Confirmado: {{ pedido.pagamento.confirmado ? 'Sim' : 'Não' }}</p>
+          </div>
         </div>
       </div>
       }
@@ -40,8 +47,6 @@
   <footer class="footer">Developed by Zapdai</footer>
 </div>
 
-
 @if (ativaCar) {
 <app-carrinho (desbiledCarEmit)="ativaCarrinho()"></app-carrinho>
-
 }
