--- a/src/app/features/pages/v1/minhasCompras/minhasCompras.component.scss
+++ b/src/app/features/pages/v1/minhasCompras/minhasCompras.component.scss
@@ -11,31 +11,76 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 1rem;
+
+    h2 {
+      margin-left: 80px;
+    }
   }
 
-  .lista-pedidos {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  .timeline {
+    position: relative;
+    margin: 2rem 0;
+    padding-left: 20px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 30px;
+      width: 2px;
+      height: 100%;
+      background-color: #dbdbdb;
+      z-index: 0; // fica atrás dos marcadores
+    }
+
+    .timeline-item {
+      position: relative;
+      margin-bottom: 3rem;
+      padding-left: 60px;
+    }
+
+    .timeline-marker {
+      position: absolute;
+      top: 10px;
+      left: 22px;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      border: 2px solid #fff;
+      background-color: #28a745;
+      box-shadow: 0 0 0 2px #28a74533;
+      z-index: 2; // garante que fique na frente da linha
+    }
+
+    .timeline-marker.pago {
+      background-color: #28a745;
+    }
+
+    .timeline-marker.pendente {
+      background-color: #ffc107;
+    }
+
+    .timeline-marker.cancelado {
+      background-color: #dc3545;
+    }
+
+    .timeline-content {
+      background: #fff;
+      border-radius: 8px;
+      padding: 1rem;
+      border: 1px solid #ccc;
+      box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.05);
+    }
+
+    .pedido-data {
+      margin-bottom: 0.5rem;
+      font-size: 0.9rem;
+      font-weight: 600;
+      color: #666;
+    }
   }
 
-  .card-pedido {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 1rem;
-    background: #fff;
-  }
 
-  .produtos ul {
-    padding-left: 1rem;
-    list-style-type: disc;
-  }
-
-  .pagamento {
-    margin-top: 1rem;
-    font-size: 0.9rem;
-    color: #555;
-  }
 
   footer {
     height: 30px;
@@ -48,10 +93,7 @@
   }
 }
 
-
-
-// -----------------------------------------------------------------------------------------------------------//
-@media screen and (min-width:769px) {
+@media screen and (min-width: 769px) {
   .main {
     margin-top: 50px;
   }
